@@ -2,6 +2,7 @@
 
 S3method(ggplot,cps_spct)
 S3method(ggplot,filter_spct)
+S3method(ggplot,object_spct)
 S3method(ggplot,raw_spct)
 S3method(ggplot,reflector_spct)
 S3method(ggplot,response_spct)
