@@ -19,14 +19,19 @@ test_that("source_spct", {
   vdiffr::expect_doppelganger("source-ggplot-p",
                               ggplot(white_led.source_spct, unit.out = "photon") +
                                 geom_line())
+  expect_error(ggplot(white_led.source_spct, unit.out = "zzz") + geom_line())
 })
 
 test_that("response_spct", {
   vdiffr::expect_doppelganger("response-ggplot",
                               ggplot(ccd.spct) + geom_line())
+  vdiffr::expect_doppelganger("response-ggplot-e",
+                              ggplot(ccd.spct, unit.out = "energy") +
+                                geom_line())
   vdiffr::expect_doppelganger("response-ggplot-p",
                               ggplot(ccd.spct, unit.out = "photon") +
                                 geom_line())
+  expect_error(ggplot(ccd.spct, unit.out = "zzz") + geom_line())
 })
 
 test_that("filter_spct", {
@@ -34,8 +39,19 @@ test_that("filter_spct", {
                               ggplot(polyester.spct) + geom_line())
 })
 
-# Not implemented yet
-# test_that("object_spct", {
-#   vdiffr::expect_doppelganger("object-default",
-#                               ggplot(Ler_leaf.spct) + geom_line())
-# })
+test_that("object_spct", {
+  vdiffr::expect_doppelganger("object-ggplot",
+                              ggplot(Ler_leaf.spct) +
+                                aes(linetype = variable) + geom_line())
+  vdiffr::expect_doppelganger("object-ggplot-all",
+                              ggplot(Ler_leaf.spct, plot.qty = "all") +
+                                aes(linetype = variable) + geom_line())
+  vdiffr::expect_doppelganger("object-ggplot-Tfr",
+                              ggplot(Ler_leaf.spct, plot.qty = "transmittance") +
+                                geom_line())
+  vdiffr::expect_doppelganger("object-ggplot-Rfr",
+                              ggplot(Ler_leaf.spct, plot.qty = "reflectance") +
+                                geom_line())
+  expect_error(ggplot(Ler_leaf.spct, plot.qty = "zzz") +
+                 geom_line())
+})
