@@ -7,6 +7,7 @@ not expanded past 6 a.u.
 Add new annotation "boundaries" to highlight with horizontal line(s) the
 expected range of the plotted quantity, highliting the limits affected when data
 fall outside the expected/range.
+Add previously missing ggplot() method for class object_spct.
 Revise vignettes.
 Add visual test cases for plot() and ggplot() methods.
 
